--- a/TASK_1.ipynb
+++ b/TASK_1.ipynb
@@ -5,7 +5,7 @@
    "id": "da01af19",
    "metadata": {},
    "source": [
-    "# *Task 1: Data Analysis Project Using Python*"
+    "# *Task 1: Data Science Project Using Python*"
    ]
   },
   {
